# personal-assistant

./: .gitignore  README.md  ai.py  api_main.py  main.py  mcp_config.json  project_outline.md  pyproject.toml  utils.py
